Fix scrollbar and overflowing

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -2,7 +2,7 @@
 
 footer {
   background-color: $background-base;
-  position: fixed;
+  position: sticky;
   bottom: 0;
   width: 100%;
 
