--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -20,9 +20,9 @@
     display: flex;
     background: #222222;
 
-    main {
-      height: calc(100% - 154px);
-      overflow: auto;
+    .content {
+      overflow-y: scroll;
+      height: calc(100vh - 90px);
     }
   }
 }
